Fix servant-jre and Pod